# Practica2graficas

./: CMakeLists.txt  caja.cpp  caja.h  conan_provider.cmake  conandata.yml  igvCamara.cpp  igvCamara.h  igvCilindro.cpp  igvCilindro.h  igvEscena3D.cpp  igvEscena3D.h  igvInterfaz.cpp  igvInterfaz.h  igvMallaTriangulos.cpp  igvMallaTriangulos.h  igvPunto3D.cpp  igvPunto3D.h  pr2a.cpp  tren_fin1.mtl
